# compound-annotator

./: .gitignore  LICENSE  README.md  StandardizeMolecule.py  StandardizeMolecule_v2.py  csv2md.py  environment.yml  pyproject.toml  repurposing-annotations.ipynb
data/: repurposing_duplicates.csv
sql/: README.md  extract_chembl_annotation.sql  extract_chembl_inchikey_mapping.sql
src/jump/: dgidb.py  unichem.py
