[tool.poetry]
name = "compound-annotator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "BSD 3-Clause"
readme = "README.md"
packages = [{include = "compound_annotator"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pandas = "^1.5.3"
numpy = "^1.24.2"
PubChemPy = "^1.0.2"
tqdm = "^4.64.1"
rdkit = "^2022.9.4"
PyMySQL = "^1.0.2"
chembl-webresource-client = "^0.10.8"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipykernel = "^6.21.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


